[package]
name = "rusty-von-humboldt"
version = "0.1.0"
authors = ["Matthew Mayer <matthewkmayer@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rayon = "1.0"
flate2 = "1.0"
rusoto_core = "0.33"
rusoto_s3 = "0.33"
lazy_static = "1.0"
md5 = "0.3"
chrono = { version = "0.4", features = ["serde"] }
sha1 = "0.6"
futures = "0.1"