[package]
name = "rusty-von-humboldt"
version = "0.2.0"
authors = ["Matthew Mayer <matthewkmayer@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rayon = "1.0"
flate2 = "1.0"
rusoto_core = "0.41"
rusoto_s3 = "0.41"
lazy_static = "1.0"
md5 = "0.6"
chrono = { version = "0.4", features = ["serde"] }
sha1 = "0.6"
futures = "0.1"
env_logger = "0.7"
log = "0.4"
indicatif = "0.12"
crossbeam-channel = "0.3"

[features]
default = ["show_progress_bar"]
show_progress_bar = []